--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id("com.github.johnrengelman.shadow") version "8.1.1"
 }
 
 group = 'net.pulsir'
@@ -19,8 +20,8 @@ repositories {
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
-    compileOnly('org.projectlombok:lombok:1.18.28')
-    annotationProcessor('org.projectlombok:lombok:1.18.28')
+    compileOnly('org.projectlombok:lombok:1.18.30')
+    annotationProcessor('org.projectlombok:lombok:1.18.30')
     implementation('org.mongodb:mongodb-driver-sync:5.0.1')
 }
 
