--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -4,3 +4,5 @@ item-null: "&cYou must hold an item in your hand to execute this command."
 
 sell-added: "&aSuccessfully added item to marketplace."
 sell-usage: "&cUsage /sell <price>"
+
+blackmarket-refresh: "&aSuccessfully refreshed blackmarket."
