--- a/src/main/resources/configuration.yml
+++ b/src/main/resources/configuration.yml
@@ -13,3 +13,20 @@ previous:
   item: "ARROW"
   name: "&cPrevious Page"
   slot: 45
+
+blackmarket-max: 9
+blackmarket:
+  title: "&dBlackMarket"
+  size: 54
+  slots: [0,1,2,3,4,5,6,7,8,9]
+
+permissions:
+  marketplace-sell: "marketplace.sell"
+  marketplace-view: "marketplace.view"
+  marketplace-blackmarket: "marketplace.blackmarket"
+  marketplace-transactions: "marketplace.history"
+  marketplace-blackmarket-refresh: "marketplace.blackmarket.refresh"
+
+# DO NOT DELETE
+
+blackmarket-reset: 0
