--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -23,6 +24,7 @@ dependencies {
     compileOnly('org.projectlombok:lombok:1.18.30')
     annotationProcessor('org.projectlombok:lombok:1.18.30')
     implementation('org.mongodb:mongodb-driver-sync:5.0.1')
+    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
 }
 
 def targetJavaVersion = 21
